--- a/Granny's Pies/index.html
+++ b/Granny's Pies/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/gif" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif">
 	<title>Granny's Pies</title>
 	<style type="text/css">
-	body{ background-image: url(images/silverware.jpg); background-repeat: repeat;}
+	body{background-image: url("http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/silverware.jpg"); background-repeat: repeat;}
 	h1{
 		font-family: Century Gothic, Futura, Verdana;
 	    font-size: 60px;
