--- a/Granny's Pies/pie.html
+++ b/Granny's Pies/pie.html
@@ -77,7 +77,7 @@
     	<h2>LINKS</h2>
     	<p><a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe">Search for other lemon meringue pie recipes</a></p>
     	<p><a href="index.html">Home</a></p>
-    	<a href="http://validator.w3.org/check/referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="xhtm"></a>
+    	<a href="http://validator.w3.org/check/referer"><img src="images/valid-xhtml11.png" height="31" width="88" alt="xhtm"></a>
     	<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="vcss"></a>
     </div>
 </body>
