--- a/Granny's Pies/index.html
+++ b/Granny's Pies/index.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" type="image/gif" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif">
+    <meta http-equiv="Content Type" content="text/html;charset = utf-8">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <!-- favicon -->
+    <link type="image/x-icon" rel="shortcut icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" >
+　　<!-- <link rel="icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" type="image/gif" > -->
 	<title>Granny's Pies</title>
-	<style type="text/css">
-	body{background-image: url("http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/silverware.jpg"); background-repeat: repeat;}
-	h1{
-		font-family: Century Gothic, Futura, Verdana;
-	    font-size: 60px;
-		text-align: center;
-		color: #A4A400;
-	}
-	img{
-		width: 400px;
-		height: 400px;
-		clear: both;
-		display: block;
-		margin:auto;
-		border-collapse: collapse;
-	}
-	a{
-		font-family:  Century Gothic, Futura, Verdana;
-		font-size: 50px;
-		text-align: center;
-		color:  #A4A400;
-	}
-	.enter{
-		text-align: center;
-	}
-	</style>
 </head>
 <body>
-<h1>Granny's Pies</h1>
-<img src="http://ww2.hdnux.com/photos/10/73/52/2341517/3/628x471.jpg" alt = "Granny's Pie">
-<div class="enter">
-<a href="pie.html">Enter</a>
-</div>
+    <h1>Granny's Pies</h1>
+    <div class="show">
+        <img src="images/Ipie.jpg" height="471" width="468" alt = "Granny's Pie" title="pictue from the Internet">
+    </div>
+    <div class="enter">
+        <a href="pie.html">Enter</a>
+    </div>
+    <!-- share -->
+    <div class="share">
+        <a href="http://www.facebook.com"><img src="images/facebook.png" height="64" width="64" title="facebook"></a>
+        <a href="http://www.twitter.com"><img src="images/twitter.png" height="64" width="64" title="twitter"></a>
+        <a href="http://www.linkedin.com"><img src="images/linkedin.png" height="64" width="64" title="linkedin"></a>
+        <a href="http://www.flickr.com"><img src="images/flickr.png" height="64" width="64" title="flickr"></a>
+    </div>
 </body>
 </html>
