--- a/Granny's Pies/pie.html
+++ b/Granny's Pies/pie.html
@@ -1,84 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Grandma's Lemon Meringue Pie</title>
-	<link rel="stylesheet" type="text/css" href="recipe.css">
+    <title>Grandma's Lemon Meringue Pie</title>
+    <link rel="stylesheet" type="text/css" href="recipe.css">
 </head>
 <body>
+<!-- heading -->
     <div class="heading"><h1>Grandma's Lemon Meringue Pie</h1></div>
     <div class="total">
-       <img src="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie.jpg" alt="lemon meringue pie">
+       <img src="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie.jpg" alt="lemon meringue pie" title="delicious pie">
        <ul>
-       	<li>One 9-inch pie</li>
-       	<li>30 Min - Prep time</li>
-       	<li>10 Min - Cook time</li>
-       	<li>40 Min - Total</li>
-       	<li>8 Servings</li>
+        <li>One 9-inch pie</li>
+        <li>30 Min - Prep time</li>
+        <li>10 Min - Cook time</li>
+        <li>40 Min - Total</li>
+        <li>8 Servings</li>
        </ul>
     </div>
+    <!-- ingredients -->
     <div class="ingredients">
-    	<h2>INGREDIENTS</h2>
-    	<ul>
-    		<li>1 cup white sugar</li>
-    		<li>2 tablespoons all-purpose flour</li>
-    		<li>3 tablespoons cornstarch</li>
-    		<li>4 teaspoon salt</li>
-    		<li>1 1/2 cups water</li>
-    		<li>2 lemons, juiced and zested</li>
-    		<li>2 tablespoons butter</li>
-    		<li>4 egg yolks, beaten</li>
-    		<li>1 (9 inch) pie crust, baked</li>
-    		<li>4 egg whites</li>
-    		<li>6 tablespoons white sugar</li>
-    	</ul>
+        <h2>INGREDIENTS</h2>
+        <ul>
+            <li>1 cup white sugar</li>
+            <li>2 tablespoons all-purpose flour</li>
+            <li>3 tablespoons cornstarch</li>
+            <li>4 teaspoon salt</li>
+            <li>1 1/2 cups water</li>
+            <li>2 lemons, juiced and zested</li>
+            <li>2 tablespoons butter</li>
+            <li>4 egg yolks, beaten</li>
+            <li>1 (9 inch) pie crust, baked</li>
+            <li>4 egg whites</li>
+            <li>6 tablespoons white sugar</li>
+        </ul>
     </div>
+    <!-- directions -->
     <div class="directions">
         <h2>DIRECTIONS</h2>
-    	<ol>
-    		<li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
-    		<li><b>Make Lemon Filling:</b> In a medium saucepan ...
-    		<ul>
-    			<li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-    			<li>Stir in water, lemon juice and lemon zest.</li>
-    			<li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-    			<li>Stir in butter.</li>
-    			<li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-    			<li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-    			<li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-    			<li>Remove from heat.</li>
-    			<li>Pour filling into baked pastry shell.</li>
-    		</ul>
-    		</li>
-    		<li>Make Meringue: In a large glass or metal bowl ...
-    		<ol>
-    			<li>Whip egg whites until foamy.</li>
-    			<li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-    			<li>Spread meringue over pie, sealing the edges at the crust.</li>
-    		</ol>
-    		</li>
-    		<li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
-    	</ol>
+        <ol>
+            <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
+            <li><b>Make Lemon Filling:</b> In a medium saucepan ...
+            <ul>
+                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+                <li>Stir in water, lemon juice and lemon zest.</li>
+                <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+                <li>Stir in butter.</li>
+                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
+                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
+                <li>Remove from heat.</li>
+                <li>Pour filling into baked pastry shell.</li>
+            </ul>
+            </li>
+            <li>Make Meringue: In a large glass or metal bowl ...
+            <ol>
+                <li>Whip egg whites until foamy.</li>
+                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+                <li>Spread meringue over pie, sealing the edges at the crust.</li>
+            </ol>
+            </li>
+            <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+        </ol>
     </div>
+    <!-- usercomments -->
     <div class="usercomments">
-    	<h2>USER COMMENTS</h2>
-    	<blockquote>
+        <h2>USER COMMENTS</h2>
+        <blockquote>
   <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.</p>
 
   <p>- Emilie S.</p>
-    	</blockquote>
-    	<blockquote>
+        </blockquote>
+        <blockquote>
   <p>Q: What do you call an ape who loves pie?
   A: A meringue-utan.</p>
 
   <p>- Vickie K.</p>
         </blockquote>
     </div>
+    <!-- foot -->
     <div class="foot">
-    	<h2>LINKS</h2>
-    	<p><a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe">Search for other lemon meringue pie recipes</a></p>
-    	<p><a href="index.html">Home</a></p>
-    	<a href="http://validator.w3.org/check/referer"><img src="images/valid-xhtml11.png" height="31" width="88" alt="xhtm"></a>
-    	<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="vcss"></a>
+        <h2>LINKS</h2>
+        <p><a href="https://www.google.com.hk/search?q=lemon+meringue+pie+recipe">Search for other lemon meringue pie recipes</a></p>
+        <p><a href="index.html">Home</a></p>
+        <a href="http://validator.w3.org/check/referer"><img src="images/valid-xhtml11.png" height="31" width="88" alt="xhtm"></a>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="vcss"></a>
     </div>
 </body>
 </html>
