--- a/Granny's Pies/index.html
+++ b/Granny's Pies/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content Type" content="text/html;charset = utf-8">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>Granny's Pies</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <!-- favicon -->
-    <link type="image/x-icon" rel="shortcut icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" >
-　　<!-- <link rel="icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" type="image/gif" > -->
-	<title>Granny's Pies</title>
+    <link type="image/x-icon" rel="shortcut icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" />
 </head>
 <body>
     <h1>Granny's Pies</h1>
@@ -18,10 +16,10 @@
     </div>
     <!-- share -->
     <div class="share">
-        <a href="http://www.facebook.com"><img src="images/facebook.png" height="64" width="64" title="facebook"></a>
-        <a href="http://www.twitter.com"><img src="images/twitter.png" height="64" width="64" title="twitter"></a>
-        <a href="http://www.linkedin.com"><img src="images/linkedin.png" height="64" width="64" title="linkedin"></a>
-        <a href="http://www.flickr.com"><img src="images/flickr.png" height="64" width="64" title="flickr"></a>
+        <a href="http://www.facebook.com"><img src="images/facebook.png  " height="64" width="64" alt="facebook" title="facebook"></a>
+        <a href="http://www.twitter.com"><img src="images/twitter.png" height="64" width="64" alt="twitter" title="twitter"></a>
+        <a href="http://www.linkedin.com"><img src="images/linkedin.png" height="64" width="64" alt="linkedin" title="linkedin"></a>
+        <a href="http://www.flickr.com"><img src="images/flickr.png" height="64" width="64" alt="flickr" title="flickr"></a>
     </div>
 </body>
 </html>
