--- a/Granny's Pies/pie.html
+++ b/Granny's Pies/pie.html
@@ -3,6 +3,7 @@
 <head>
     <title>Grandma's Lemon Meringue Pie</title>
     <link rel="stylesheet" type="text/css" href="recipe.css">
+    <link type="image/x-icon" rel="shortcut icon" href="http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif" />
 </head>
 <body>
 <!-- heading -->
