--- a/Granny's Pies/pie.html
+++ b/Granny's Pies/pie.html
@@ -53,14 +53,14 @@
                 <li>Pour filling into baked pastry shell.</li>
             </ul>
             </li>
-            <li>Make Meringue: In a large glass or metal bowl ...
+            <li><b>Make Meringue:</b> In a large glass or metal bowl ...
             <ol>
                 <li>Whip egg whites until foamy.</li>
                 <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
                 <li>Spread meringue over pie, sealing the edges at the crust.</li>
             </ol>
             </li>
-            <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+            <li><b>Bake:</b> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
         </ol>
     </div>
     <!-- usercomments -->
