--- a/TMNT/skeleton.html
+++ b/TMNT/skeleton.html
@@ -10,17 +10,20 @@
 </head>
 
 <body>
+	<!-- The banner on the top of this page. -->
 	<div id="banner">
 		<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
 	</div>
-
+	<!-- The name and year of this movie. -->
 	<div id="title">
 		<h1>TMNT (2007)</h1>
 	</div>
+
 	<!-- The main body of this page, containing the basic information and critics' reviews. -->
 	<div id="content">
 		<div id="general_overview">
 			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/generaloverview.png" alt="general overview" />
+
 			<!--The basic introduction of this movie.-->
 			<div id="introduction">
 				<dl>
@@ -65,6 +68,7 @@
 				</dl>
 			</div>
 		</div>
+
 		<!-- The top bar of the part of others' reviews. -->
 		<div id="top">
 			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png" alt="Rotten" />
@@ -73,6 +77,7 @@
 				<span class="reviews_text">(88 reviews total)</span>
 			</div>
 		</div>
+
 		<!-- The comment board. -->
 		<div id="comment_board">
 			<div id="left">
@@ -226,14 +231,15 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
+
 		<!-- The foot. There's now only page number. -->
 		<div id="pages">
 			<p>(1-8) of 88</p>
 		</div>
 	</div>
-	<!-- The two signs that proves this page's source code has passed the validation. It always stays at the buttom-right of the window on our browser-->
+
+	<!-- The two signs that proves this page's source code has passed the validation. It always stays at the buttom-right of the window on our browsers.-->
 	<div id="check">
 		<a href="http://validator.w3.org/check/referer">
 			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/w3c-xhtml.png" alt="Valid XHTML 1.1" />
