--- a/TMNT/skeleton.html
+++ b/TMNT/skeleton.html
@@ -15,8 +15,8 @@
 		<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
 	</div>
 	<!-- The name and year of this movie. -->
-	<div id="title">
-		<h1>TMNT (2007)</h1>
+	<div id="Title">
+		<h1 id="title">TMNT (2007)</h1>
 	</div>
 
 	<!-- The main body of this page, containing the basic information and critics' reviews. -->
